static/cmaps80.css
/* roboto-regular - latin */
@font-face {
    font-family: 'Roboto';
    font-style: normal;
    font-weight: 400;
    src: url('fonts/roboto-v30-latin-regular.eot'); /* IE9 Compat Modes */
    src: local(''),
         url('fonts/roboto-v30-latin-regular.eot?#iefix') format('embedded-opentype'), /* IE6-IE8 */
         url('fonts/roboto-v30-latin-regular.woff2') format('woff2'), /* Super Modern Browsers */
         url('fonts/roboto-v30-latin-regular.woff') format('woff'), /* Modern Browsers */
         url('fonts/roboto-v30-latin-regular.ttf') format('truetype'), /* Safari, Android, iOS */
         url('fonts/roboto-v30-latin-regular.svg#Roboto') format('svg'); /* Legacy iOS */
}

.rotated { 
    -webkit-transform: rotate(90deg);
    -moz-transform: rotate(90deg);
    -o-transform: rotate(90deg);
    -ms-transform: rotate(90deg);
    transform: rotate(90deg);
}

.clock {
    position:fixed; 
    bottom:0px; 
    width: 180px;
    left: 50%;
    margin-left: -100px; 
    text-align:center;
    background-color: #333;
    border-radius: 10px 10px 0px 0px;
    padding: 10px;
    cursor: pointer;
    z-index:1;
}

.clock:hover {
    background-color: #555;
}

.datepicker {
    position:fixed;
    left:50%;
    bottom:0px;
    width:180px;
    height:175px;
    margin-left:-100px;
    padding:15px 15px 10px 15px;
    background-color:#333;
    border-radius:10px 10px 0px 0px;
    display:none;
    z-index:0;
}

.datepicker_separator {
    position:absolute;
    left:17px;
    bottom:45px;
    width:166px;
    height:2px;
    background-color:#c0c0c0
}

.rightmeet_now {
    height: 100%; 
    width: 175px; 
    padding-left:100px;
    float:left; 
    margin:0px;
}

.rightmeet_next {
    height: 100%; 
    width: 215px; 
    float:right; 
    margin:0px;
}

.meettext {
    padding: 10px;
    font-size: 1.1em;
    line-height: 155%;
}

.leftmeet_now {
    height: 100%; 
    width: 215px; 
    float:left; 
    margin:0px;
}

.leftmeet_next {
    height: 100%; 
    width: 175px; 
    padding-right: 100px;
    float:right; 
    margin:0px;
}


/* Pulsating for meeting rooms */

@keyframes green-pulse
{
     0% {
          box-shadow: 0 0 0 0px rgba(0, 255, 0, 0.9);
     }
     100% {
          box-shadow: 0 0 0 10px rgba(0, 255, 0, 0);
     }
}

@keyframes blue-pulse
{
     0% {
          box-shadow: 0 0 0 0px rgba(0, 187, 255, 1);
     }
     100% {
          box-shadow: 0 0 0 10px rgba(0, 187, 255, 0);
     }
}

@keyframes red-pulse
{
     0% {
          box-shadow: 0 0 0 0px rgba(255, 0, 0, 0.9);
     }
     100% {
          box-shadow: 0 0 0 10px rgba(255, 0, 0, 0);
     }
}

@keyframes orange-pulse
{
     0% {
          box-shadow: 0 0 0 0px rgba(255, 127, 0, 0.9);
     }
     100% {
          box-shadow: 0 0 0 10px rgba(255, 127, 0, 0);
     }
}

@keyframes orange-teampulse
{
     0% {
          box-shadow: 0 0 0 0px rgba(255, 127, 0, 0.9);
     }
     100% {
          box-shadow: 0 0 0 100px rgba(255, 127, 0, 0);
     }
}

/* Right mapplate */

.rightmapplate {
    height:200px; 
    width:600px;
    background-color: #333;
    color: #fff;
    border-radius: 100px 100px 100px 100px;
    position: absolute;
    z-index:101;
    overflow: hidden;
}

.rightmapplate_top {
    position: absolute; 
    right: 86px; 
    top:2px; 
    left:100px;
    height:50px; 
    overflow:hidden;
    background-color:#999; 
    text-align: center;
    line-height: 50px;
    padding-left:100px;
    font-size:24px;
    border-radius: 0px 5px 0px 0px;
}

.rightmapplate_avatar {
    position: absolute; 
    top:2px; 
    left: 2px; 
    width:196px; 
    height: 196px;
    overflow:hidden; 
    border-radius: 50%;
}

.rightmapplate_close {
    position: absolute; 
    top:2px; 
    left: 2px; 
    width:196px; 
    height: 196px;
    overflow:hidden; 
    border-radius: 50%;
    opacity: 0;
}

.rightmapplate_close:hover {
    opacity: 1;
}

.rightmapplate_textbox {
    position: absolute; 
    right: 86px; 
    top:52px; 
    bottom:2px;
    width: 300px; 
    padding-left:5px; 
    padding-right: 5px;
    padding-top: 10px;
    overflow:hidden; 
    font-size: 14px;
    line-height:155%;
    background: #333;
    border-radius: 0px 0px 5px 0px;
}

.rightmapplate_goto {
    position: absolute; 
    right: 2px; 
    bottom:2px; 
    top: 2px;
    width: 100px; 
    overflow:hidden; 
    padding-left:5px; 
    padding-right: 5px;
    text-align: center;  
    line-height: 196px; 
    border-radius:0px 100px 100px 0px; 
    font-size: 16px; 
    background:#111;
    opacity:0.7;
}

.rightmapplate_goto:hover {
    opacity: 1;
}

.rightmapplate_copy {
    position: absolute; 
    right: 85px; 
    bottom:2px; 
    width: 30px; 
    height:30px; 
    overflow:hidden; 
    padding-left:5px; 
    padding-right: 5px;
    text-align: center;  
    line-height: 30px; 
    border-radius:10px 0px 10px 0px; 
    font-size: 16px; 
    opacity: 0.7;
    cursor: pointer;
}

.rightmapplate_copy:hover {
    opacity: 1.0;
}

/* Left mapplate */

.leftmapplate {
    height:200px; 
    width:600px;
    background-color: #333;
    color: #fff;
    border-radius: 100px 100px 100px 100px;
    position: absolute;
    z-index:101;
    overflow: hidden;
}

.leftmapplate_top {
    position: absolute; 
    left: 86px; 
    top:2px; 
    right:100px;
    height:50px; 
    overflow:hidden;
    background-color:#999; 
    text-align: center;
    line-height: 50px;
    padding-right:100px;
    font-size:24px;
    border-radius: 5px 0px 0px 0px;
}

.leftmapplate_avatar {
    position: absolute; 
    top:2px; 
    right: 2px; 
    width:196px; 
    height: 196px;
    overflow:hidden; 
    border-radius: 50%;
}

.leftmapplate_close {
    position: absolute; 
    top:2px; 
    right: 2px; 
    width:196px; 
    height: 196px;
    overflow:hidden; 
    border-radius: 50%;
    opacity: 0;
}

.leftmapplate_close:hover {
    opacity: 1;
}
/* ... */

